# subtitledss

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  index.html  logo-proposals.html  opencode.json  package.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  release.yml
.specify/: integration.json  plan.md  tasks.md
.specify/features/001-core-transcription/: spec.md
.specify/features/002-stability/: spec.md
.specify/features/003-ux/: spec.md
.specify/features/004-functionality/: spec.md
.specify/features/005-overlay-translation/: plan.md  spec.md  tasks.md
.specify/features/006-translation-qa-fixes/: plan.md  spec.md  tasks.md
.specify/features/007-candle-marian-translation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/features/008-ui-modernization/: plan.md  spec.md  tasks.md
.specify/features/009-video-transcription-ai/: plan.md  spec.md  tasks.md
.specify/features/010-macos-compatibility/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
aur/: PKGBUILD  subtitledss.desktop
config/: default.toml
public/: overlay.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: commands.rs  config.rs  mod.rs  provider.rs
src-tauri/src/audio/: buffer.rs  capture.rs  device.rs  mod.rs
src-tauri/src/commands/: capture.rs  export.rs  history.rs  mod.rs  models.rs  overlay.rs  settings.rs  transcription.rs  translation.rs  video_transcription.rs
src-tauri/src/diarization/: engine.rs
src-tauri/src/history/: db.rs  mod.rs  search.rs
src-tauri/src/models/: downloader.rs  manager.rs  mod.rs
src-tauri/src/overlay/: manager.rs  mod.rs
src-tauri/src/pipeline/: mod.rs  transcriber.rs
src-tauri/src/settings/: config.rs
src-tauri/src/translation/: marian.rs  mod.rs  model.rs
src-tauri/src/vad/: detector.rs  mod.rs
src-tauri/src/video/: processor.rs
src-tauri/src/whisper/: engine.rs  mod.rs  model.rs  params.rs
src/components/Audio/: AudioPage.tsx
src/components/Dashboard/: AudioMeterCard.tsx  Dashboard.tsx  LiveTranscriptionPanel.tsx  ModelStatusCard.tsx  QuickActions.tsx  StatusHeroCard.tsx
src/components/Export/: ExportDialog.tsx
src/components/History/: HistoryList.tsx
src/components/Layout/: AppShell.tsx  SectionRouter.tsx  Sidebar.tsx  types.ts
src/components/ModelManager/: ModelList.tsx
src/components/Onboarding/: OnboardingWizard.tsx  ProgressDots.tsx
src/components/Overlay/: OverlayPage.tsx  OverlayWindow.tsx  SubtitleText.tsx
src/components/Settings/: AiSettings.tsx  AudioSettings.tsx  InlineControl.tsx  ModelPicker.tsx  SettingsLayout.tsx  SettingsPanel.tsx  SettingsSection.tsx  ShortcutsSettings.tsx  ThemeSettings.tsx  (+2 more)
src/hooks/: useOnboarding.ts  useOverlay.ts  useSettings.ts  useToast.ts  useTranscription.ts  useVideoTranscription.ts
src/styles/: globals.css
ui-mockups/: dashboard.html  index.html  onboarding.html  polish.html  server.ts  settings.html
(+21 files in other folders)
