[package]
name = "subtitledss"
version = "0.1.0"
description = "Real-time subtitle overlay for Linux"
authors = ["Daniel Dussan"]
edition = "2021"
license = "MIT"
repository = "https://github.com/danieldussan/subtitledss"

[lib]
name = "subtitledss_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
whisper-rs = { version = "0.16", features = ["tracing_backend"] }
cpal = { version = "0.18", features = ["pipewire"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
gpu = ["cuda"]
