[package]
name = "subtitledss"
version = "1.2.1"
description = "Real-time subtitle overlay for Linux and macOS"
authors = ["Daniel Dussan"]
edition = "2021"
license = "MIT"
repository = "https://github.com/danieldussan/subtitledss"

[lib]
name = "subtitledss_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
chrono = "0.4"
hf-hub = { version = "1.0.0", features = ["blocking"] }
candle-core = "0.11.0"
candle-transformers = "0.11.0"
candle-nn = "0.11.0"
tokenizers = "0.23"
safetensors = "0.5"
async-trait = "0.1"
hound = "3.5"
futures-util = "0.3"
speakrs = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
cpal = { version = "0.18", features = ["pipewire"] }
whisper-rs = { version = "0.16", features = ["tracing_backend"] }

[target.'cfg(target_os = "macos")'.dependencies]
cpal = { version = "0.18" }
whisper-rs = { version = "0.16", features = ["tracing_backend", "metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
cpal = { version = "0.18" }
whisper-rs = { version = "0.16", features = ["tracing_backend"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
metal = ["whisper-rs/metal"]
gpu = ["cuda"]
